fix: unwanted text overflow on safari

--- a/public/datasets/result.css
+++ b/public/datasets/result.css
@@ -1,10 +1,11 @@
 zack-results {
     --zack-result-columns: [main] 50% [details] 25% [links] 25%;
     --zack-result-rows: auto;
+    --zack-result-height: 95px;
 }
 
 zack-results::part(result) {
-    height: 95px;
+    height: var(--zack-result-height);
     border-top: 1px solid #CCC;
     overflow: hidden;
 }
@@ -22,6 +23,8 @@ zack-results::part(detail) {
     line-height: 1.6;
     padding: 5px;
     font-size: 14px;
+    overflow: scroll;
+    height: var(--zack-result-height);
 }
 
 zack-results::part(links) {
